<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_light_gray"
    android:gravity="center_horizontal">

    <!-- Título del formulario -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="24dp" />

    <!-- Campo de usuario o correo -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_or_email_hint"
        android:inputType="textEmailAddress|text"
        android:autofillHints="username"
        android:padding="8dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_background"
        android:importantForAccessibility="no"
        android:layout_marginBottom="16dp" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="8dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_background"
        android:importantForAccessibility="no"
        android:layout_marginBottom="24dp" />

    <!-- Botón de validación -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/button_purple"
        android:layout_marginBottom="16dp" />

    <!-- Botón para crear una cuenta nueva -->
    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_button"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/button_purple"
        android:layout_marginBottom="16dp" />

    <!-- Botón de Google Sign-In -->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>
</LinearLayout>
