<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <!-- Campo de usuario -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:autofillHints="username"
        android:padding="8dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp" />

    <!-- Campo de correo -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:padding="8dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="8dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp" />

    <!-- Campo de confirmación de contraseña -->
    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="8dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="24dp" />

    <!-- Botón de registro -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/colorPrimary" />
</LinearLayout>
